render/naga-agal/tests/snapshots/wgsl__complex_fractal.snap
---
source: render/naga-agal/tests/wgsl.rs
expression: output
---
struct VertexOutput {
    @builtin(position) member: vec4<f32>,
    @location(0) varying_0_: vec4<f32>,
}

@group(0) @binding(0) 
var<uniform> constant_registers: array<vec4<f32>,128u>;

@vertex 
fn main(@location(0) param: vec2<f32>, @location(1) param_1: vec2<f32>) -> VertexOutput {
    var dest_temp: vec4<f32>;
    var varying_0_: vec4<f32>;

    dest_temp = vec4<f32>(param.x, param.y, 0.0, 1.0);
    let _e10: vec4<f32> = constant_registers[1u];
    let _e13: vec4<f32> = constant_registers[2u];
    let _e16: vec4<f32> = constant_registers[3u];
    let _e19: vec4<f32> = constant_registers[4u];
    varying_0_ = (transpose(mat4x4<f32>(_e10, _e13, _e16, _e19)) * vec4<f32>(param_1.x, param_1.y, 0.0, 1.0));
    let _e32: vec4<f32> = constant_registers[0u];
    let _e33: vec4<f32> = _e32.zwww;
    varying_0_.z = _e33.z;
    varying_0_.w = _e33.w;
    let _e38: vec4<f32> = dest_temp;
    let _e39: vec4<f32> = varying_0_;
    return VertexOutput(_e38, _e39);
}

